--- a/yummy-tummy-front/src/components/common/nav/nav.css
+++ b/yummy-tummy-front/src/components/common/nav/nav.css
@@ -18,3 +18,10 @@
   padding: 0 15px;
   cursor: pointer;
 }
+
+.navContentTextActive {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 0 15px;
+  cursor: pointer;
+}
